# RosterGenerator

./: .env  .gitignore  CITATION.cff  config.py  env.py  logging_config.py  main.py  pyproject.toml  readme.md  requirements
.github/workflows/: release.yml
data/: config.json  employees.json  lines.json  roster_2025_q1.json  scoring.json
domain/: __init__.py  employee.py  line.py  roster.py  shift.py
engine/: __init__.py  engine.py  generator.py  optimiser.py  scorer.py  validator.py
installer/windows/: roster_generator.iss
persistence/: excel_export.py  json_io.py
scripts/: build_windows.ps1
src/roster_generator/: __main__.py  app.py  version.py
src/roster_generator/services/: update_service.py
src/roster_generator/ui/: menu.py  sidebar.py  theme.py
src/roster_generator/ui/screens/: settings_screen.py
src/roster_generator/ui/widgets/: markdown_text.py
